@@ -39,6 +39,7 @@ The following bugs are resolved with this release:
   [29209] libc: isfdtype is not y2038 aware
   [29210] network: ruserpass is not y2038 aware
   [29211] libc: __open_catalog is not y2038 aware
+  [29213] libc: gconv_parseconfdir is not y2038 aware
 
 
 Version 2.35
